--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,15 @@
 server.port=80
-#spring.social.wechat.app-id=
-#spring.social.wechat.app-secret=
+#然而公众号的appId和appSecret没什么用
+#spring.social.wechat.app-id=wx085624c1c14c4d96
+#spring.social.wechat.app-secret=8aec5f7d8651a406cb8fee583ba4a2ba
 spring.social.github.client-id=c64b4a90108f6a0b3e8e
 spring.social.github.client-secret=63f66230dda3c5e0920c5c83581b8001496046cd
 spring.social.github.scope=user
+#spring.social.github.redirect_uri=/auth/github
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC
 logging.level.web=DEBUG
 spring.devtools.add-properties=false
+spring.mvc.hiddenmethod.filter.enabled=true
