--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,11 @@ spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC
 logging.level.web=DEBUG
 spring.devtools.add-properties=false
 spring.mvc.hiddenmethod.filter.enabled=true
+
+jwt.config.key-location=liyuan.jks
+jwt.config.key-alias=Liyuan123
+jwt.config.key-pass=123456
+jwt.config.issuer=Liyuan
+jwt.config.subscriber=all
+jwt.config.access-expire-days=10
+jwt.config.refresh-expire-days=90
