jwt以及jwtAuthenticatio均已实现，至此，权限配置这边全部完成!，进入下一步

--- a/pom.xml
+++ b/pom.xml
@@ -93,5 +93,10 @@
             <artifactId>spring-security-jwt</artifactId>
             <version>1.0.9.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
