--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,4 @@ jwt.config.issuer=Liyuan
 jwt.config.subscriber=all
 jwt.config.access-expire-days=10
 jwt.config.refresh-expire-days=90
+jwt.config.enabled=true
