--- a/pom.xml
+++ b/pom.xml
@@ -98,5 +98,11 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.qcloud/cos_api -->
+        <dependency>
+            <groupId>com.qcloud</groupId>
+            <artifactId>cos_api</artifactId>
+            <version>5.6.28</version>
+        </dependency>
     </dependencies>
 </project>
