--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ logging.level.web=DEBUG
 spring.devtools.add-properties=false
 spring.mvc.hiddenmethod.filter.enabled=true
 
+#和jwt有关设置
 jwt.config.key-location=liyuan.jks
 jwt.config.key-alias=Liyuan123
 jwt.config.key-pass=123456
@@ -22,3 +23,11 @@ jwt.config.subscriber=all
 jwt.config.access-expire-days=10
 jwt.config.refresh-expire-days=90
 jwt.config.enabled=true
+
+#腾讯云对象存储
+qcloud.api.enabled=true
+qcloud.api.secretId=AKIDsjKkunCxe5SEl2w8H1ViNXS8gyzkqE6D
+qcloud.api.secretKey=zjmo3dxIOjdIkwwglbBXdVwaeRS7rLYj
+qcloud.api.bucketName=liyuan123-osstest-1300780430
+qcloud.api.regionName=ap-guangzhou
+qcloud.api.appId=1300780430
