--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,10 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/com.qcloud/cos_api -->
         <dependency>
             <groupId>com.qcloud</groupId>
